--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -208,18 +208,43 @@ main > section {
 .card:hover {
 	box-shadow: 0 0 8px var(--shadow);
 }
+.card-image-wrapper {
+	position: relative;
+	border-radius: 8px;
+	overflow: hidden;
+}
 
+.card-image-wrapper::after {
+	cursor: pointer;
+	opacity: 0;
+	content: "open";
+  font-size: 1.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: var(--primary-white);
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.226);
+	position: absolute;
+	top: 0;
+	left: 0;
+  transition: all 0.3s;
+}
+.card-image-wrapper:hover::after {
+	opacity: 1;
+}
 .card {
 	display: flex;
 	flex-direction: column;
 	border-radius: 8px;
 	overflow: hidden;
 	padding: 8px;
-	padding-top: 0;
 }
 .card p {
 	text-align: justify;
 }
+
 .card:hover img {
 	scale: 1.1;
 }
@@ -257,6 +282,9 @@ footer p {
 	.nav-item {
 		padding: 8px;
 	}
+  header{
+    height: 320px;
+  }
 	header section {
 		flex-direction: row;
 		justify-content: center;
