set max width to body in big screen

--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -31,6 +31,10 @@
 
 body {
 	background-color: var(--light-gray);
+	max-width: 1440px;
+	margin: 0 auto;
+	padding: 40px;
+	padding-top: 0;
 }
 li {
 	list-style: none;
@@ -50,6 +54,8 @@ header {
 	background-position: center;
 	background-size: cover;
 	height: 280px;
+	border-bottom-left-radius: 16px;
+	border-bottom-right-radius: 16px;
 }
 
 header section {
@@ -105,11 +111,10 @@ ul {
 
 main {
 	display: flex;
-	padding: 40px;
 	gap: 40px;
 	align-items: flex-start;
-	max-width: 1440px;
-	margin: 0 auto;
+
+	padding-top: 40px;
 }
 
 main aside {
@@ -218,7 +223,7 @@ main > section {
 	cursor: pointer;
 	opacity: 0;
 	content: "open";
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -229,7 +234,7 @@ main > section {
 	position: absolute;
 	top: 0;
 	left: 0;
-  transition: all 0.3s;
+	transition: all 0.3s;
 }
 .card-image-wrapper:hover::after {
 	opacity: 1;
@@ -267,7 +272,17 @@ footer p {
 	color: var(--primary-black);
 }
 
+@media screen and (max-width: 1024px) {
+	body {
+		padding: 8px;
+		padding-top: 0;
+	}
+}
+
 @media screen and (max-width: 425px) {
+	body {
+		padding: 0;
+	}
 	nav,
 	ul {
 		flex-direction: column;
@@ -282,9 +297,9 @@ footer p {
 	.nav-item {
 		padding: 8px;
 	}
-  header{
-    height: 320px;
-  }
+	header {
+		height: 320px;
+	}
 	header section {
 		flex-direction: row;
 		justify-content: center;
