--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -68,6 +68,7 @@ header section p {
 	font-size: 40px;
 	font-weight: bolder;
 	color: white;
+	text-shadow: 0 0 5px var(--primary-black);
 }
 header section input {
 	padding: 16px 48px;
@@ -90,6 +91,7 @@ nav {
 .logo {
 	margin-right: auto;
 	margin-left: 26px;
+	text-shadow: 0 0 8px var(--primary-black);
 }
 .logo p {
 	font-size: 2rem;
