correct scroll effect

--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -125,13 +125,16 @@ main aside {
 	flex-direction: column;
 	align-items: center;
 }
-main aside > p {
+main aside>div p {
 	margin-right: auto;
 	margin-left: 4px;
 	font-size: 1.8rem;
 	font-weight: bolder;
 	margin-top: 24px;
 	margin-bottom: 8px;
+}
+main aside>div {
+	width: 100%
 }
 .profile,
 .skills {
