--- a/test/style.css
+++ b/test/style.css
@@ -1,40 +1,74 @@
-.first {
-	width: 300px;
-	height: 300px;
-	background-color: crimson;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+.wrapper {
+	margin: 20px auto;
+	max-width: 400px;
+	padding: 16px;
 	position: relative;
 }
-.second {
-	width: 100px;
-	height: 30px;
-	background-color: white;
+
+/* .wrapper::after {
+	content: "";
+	width: 2px;
+	height: 100%;
+	background-color: red;
 	position: absolute;
-	bottom: 0;
-	left: calc(50% - 50px);
-	border-top-left-radius: 25px;
-	border-top-right-radius: 25px;
+	left: 50%;
+	top: 0;
+} */
+
+.item {
+	padding: 16px;
+	position: relative;
+	width: 50%;
+	margin-top: 4px;
 }
 
-.second::before {
+.item:nth-child(even) {
+	left: calc(50% - 2px);
+	border-left: 2px dashed red;
+}
+.item:nth-child(odd) {
+	border-right: 2px dashed red;
+	text-align: right;
+}
+.item:nth-child(odd)::after {
 	content: "";
-	width: 16px;
-	height: 16px;
-	background: transparent;
-	position: absolute;
-	bottom: 0;
-	left: -16px;
+	width: 12px;
+	height: 12px;
 	border-radius: 50%;
-	box-shadow: 8px 8px white;
+	background-color: rgb(115, 221, 15);
+	top: calc(50% - 6px);
+	position: absolute;
+	right: -7px;
+	z-index: 1;
+}
+.item:nth-child(even)::before {
+	content: "";
+	width: 12px;
+	height: 12px;
+	border-radius: 50%;
+	background-color: rgb(115, 221, 15);
+	top: calc(50% - 6px);
+	position: absolute;
+	left: -7px;
+	z-index: 1;
 }
 
-.second::after {
-	content: "";
-	width: 16px;
-	height: 16px;
-	background: transparent;
-	position: absolute;
-	right: -16px;
-	bottom: 0;
-	border-radius: 50%;
-	box-shadow: -8px 8px white;
+@media screen and (max-width: 425px) {
+	.item:nth-child(odd) {
+		text-align: left;
+		border: none;
+		border-left: 2px dashed red;
+	}
+	.item:nth-child(even) {
+		left: 0;
+	}
+	.item:nth-child(odd)::after {
+		left: -7px;
+	}
 }
