--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -53,24 +53,25 @@ header {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	height: 280px;
 	border-bottom-left-radius: 16px;
 	border-bottom-right-radius: 16px;
+	padding: 14px;
 }
 
-header section {
+.follow {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 28px;
+	gap: 14px;
+	margin-top: 32px;
 }
-header section p {
+.follow p {
 	font-size: 40px;
 	font-weight: bolder;
 	color: white;
 	text-shadow: 0 0 5px var(--primary-black);
 }
-header section input {
+.follow input {
 	padding: 16px 48px;
 	font-size: large;
 	border: none;
@@ -79,26 +80,38 @@ header section input {
 	background-color: var(--primary-btn);
 	color: white;
 }
-header section input:hover {
+.follow input:hover {
 	background-color: var(--btn-hover);
 }
 nav {
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	padding: 28px 18px;
+}
+.logo-menu {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+.menu-btn {
+	display: none;
+  min-width: 28px;
+  min-height: 28px;
+  color: white;
+  cursor: pointer;
 }
 .logo {
 	margin-right: auto;
-	margin-left: 26px;
-	text-shadow: 0 0 8px var(--primary-black);
+	margin-left: 16px;
+	text-shadow: 0 0 8px #fff;
 }
 .logo p {
 	font-size: 2rem;
 	font-weight: bolder;
 	color: var(--primary-logo);
 }
-ul {
+.menu {
 	display: flex;
 	gap: 4px;
 }
@@ -329,15 +342,21 @@ footer p {
 
 @media screen and (max-width: 425px) {
 	body {
-		padding: 0;
+		padding: 0 4px;
 	}
 	nav,
-	ul {
+	.menu {
 		flex-direction: column;
 		align-items: center;
 	}
-	nav {
-		padding: 14px;
+
+	.menu {
+		height: 0;
+		overflow: hidden;
+	}
+
+	.menu-btn {
+		display: block;
 	}
 	.logo {
 		margin: 0;
@@ -345,38 +364,29 @@ footer p {
 	.nav-item {
 		padding: 8px;
 	}
-	header {
-		height: 320px;
+	.follow {
+		margin-top: 14px;
 	}
-	header section {
-		flex-direction: row;
-		justify-content: center;
-	}
-	header section p {
+	.follow p {
 		font-size: 1.8rem;
 		text-align: center;
 	}
 
-	header section input {
+	.follow input {
 		padding: 8px 38px;
-		font-size: large;
-		border: none;
 		border-radius: 4px;
-		cursor: pointer;
-		background-color: var(--primary-btn);
-		color: var(--light-gray);
 	}
 	main {
 		grid-template-columns: 1fr;
-    grid-template-rows: none;
+		grid-template-rows: none;
 	}
-.profile-sec,
-.skills-sec,
-.timeline-sec,
-.projects-sec {
-	grid-column: auto;
-  grid-row: auto;
-}
+	.profile-sec,
+	.skills-sec,
+	.timeline-sec,
+	.projects-sec {
+		grid-column: auto;
+		grid-row: auto;
+	}
 	.content {
 		grid-template-columns: 1fr;
 	}
@@ -399,14 +409,14 @@ footer p {
 }
 
 @media screen and (max-width: 320px) {
-	header section p {
+	.follow p {
 		font-size: 1.3rem;
 		text-align: center;
 	}
-	header section {
+	.follow {
 		padding: 0 4px;
 	}
-	header section input {
+	.follow input {
 		padding: 6px 24px;
 	}
 }
