--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -7,6 +7,8 @@
 	--primary-white: #ffffff;
 	--btn-hover: #1b2f7e;
 	--shadow: #c6c6c6;
+	--small-radius: 4px;
+	--big-radius: 16px;
 }
 /* :root {
 	--primary-black: #ffffff;
@@ -75,7 +77,7 @@ header {
 	padding: 16px 48px;
 	font-size: large;
 	border: none;
-	border-radius: 4px;
+	border-radius: var(--small-radius);
 	cursor: pointer;
 	background-color: var(--primary-btn);
 	color: white;
@@ -96,10 +98,10 @@ nav {
 }
 .menu-btn {
 	display: none;
-  min-width: 28px;
-  min-height: 28px;
-  color: white;
-  cursor: pointer;
+	min-width: 28px;
+	min-height: 28px;
+	color: white;
+	cursor: pointer;
 }
 .logo {
 	margin-right: auto;
@@ -120,41 +122,21 @@ nav {
 }
 .nav-item a {
 	padding: 16px;
-	border-radius: 4px;
+	border-radius: var(--small-radius);
 	font-weight: bold;
 }
 
 main {
-	display: grid;
-	grid-template-columns: repeat(12, 1fr);
+	margin-top: 40px;
+	display: flex;
 	gap: 40px;
-	padding-top: 40px;
+}
+.main-item {
+	margin-top: 32px;
 }
 
-.main-item {
-	max-height: max-content;
-}
 .main-item > h3 {
 	margin-left: 8px;
-}
-
-.profile-sec {
-	grid-column: 1 / span 5;
-	grid-row: 1;
-}
-
-.profile {
-}
-
-.skills-sec {
-	grid-column: 1 / span 5;
-}
-.timeline-sec {
-	grid-column: 1 / span 5;
-}
-.projects-sec {
-	grid-column: 6/ -1;
-	grid-row: 1/12;
 }
 
 .projects {
@@ -166,14 +148,37 @@ main {
 .profile,
 .skills,
 .timeline,
-.projects {
-	border-radius: 16px;
+.projects,
+.quotes {
+	border-radius: var(--big-radius);
 	padding: 32px;
 	width: 100%;
 	margin-top: 14px;
 	background-color: var(--primary-white);
 }
-
+.quotes {
+	display: flex;
+	max-width: 810px;
+	overflow-x: auto;
+}
+.quote {
+	/* margin-top: 24px; */
+	padding: 16px;
+	border-radius: var(--small-radius);
+	min-width: 300px;
+	display: flex;
+	flex-direction: column;
+}
+.quote:hover {
+	background-color: var(--light-gray);
+}
+.quote:first-child {
+	margin-top: 0;
+}
+.quote p {
+	margin-top: 8px;
+	text-align: justify;
+}
 .skill {
 	margin-top: 16px;
 }
@@ -374,21 +379,23 @@ footer p {
 
 	.follow input {
 		padding: 8px 38px;
-		border-radius: 4px;
+		border-radius: var(--small-radius);
 	}
 	main {
-		grid-template-columns: 1fr;
-		grid-template-rows: none;
+		flex-direction: column;
 	}
-	.profile-sec,
-	.skills-sec,
-	.timeline-sec,
-	.projects-sec {
-		grid-column: auto;
-		grid-row: auto;
-	}
+
 	.content {
 		grid-template-columns: 1fr;
+	}
+	.timeline-item {
+		border: none !important;
+		border-left: 2px solid var(--primary-black) !important;
+		left: 0 !important;
+		text-align: left !important;
+	}
+	.timeline-item::after {
+		left: -7px;
 	}
 }
 @media screen and (max-width: 768px) {
@@ -397,12 +404,10 @@ footer p {
 	}
 }
 @media screen and (max-width: 950px) {
-	.projects-sec {
-		max-height: 900px;
-		overflow: auto;
-	}
 	.projects {
 		grid-template-columns: 1fr;
+		max-height: 900px;
+		overflow: auto;
 	}
 }
 @media screen and (max-width: 50px) {
@@ -419,6 +424,4 @@ footer p {
 	.follow input {
 		padding: 6px 24px;
 	}
-}
-@media screen and (min-width: 1440px) {
 }
