--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -147,7 +147,8 @@ main {
 }
 
 .main-right {
-	flex: 4;
+  flex: 4;
+  width: 50%;
 }
 .main-left {
 	flex: 2;
@@ -165,6 +166,7 @@ main {
 	background-color: var(--primary-white);
 }
 .quotes {
+  display: flex;
 	max-height: 400px;
   overflow: auto;
 }
