fixed width of main-right section of mobile view

--- a/Profire Page/style/style.css
+++ b/Profire Page/style/style.css
@@ -397,6 +397,9 @@ footer p {
 	main {
 		flex-direction: column;
 	}
+  .main-right{
+    width: 100%;
+  }
 
 	.content {
 		grid-template-columns: 1fr;
