fixed ui and Writing dark mode toggle, menu toggle, add note, search note and relode btn code

--- a/javascript/Notes/assets/css/style.css
+++ b/javascript/Notes/assets/css/style.css
@@ -7,29 +7,21 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-400: oklch(70.4% 0.191 22.216);
-    --color-red-800: oklch(44.4% 0.177 26.899);
-    --color-red-900: oklch(39.6% 0.141 25.723);
     --color-yellow-400: oklch(85.2% 0.199 91.936);
-    --color-yellow-500: oklch(79.5% 0.184 86.047);
-    --color-yellow-600: oklch(68.1% 0.162 75.834);
-    --color-yellow-700: oklch(55.4% 0.135 66.442);
     --color-yellow-800: oklch(47.6% 0.114 61.907);
-    --color-green-400: oklch(79.2% 0.209 151.711);
-    --color-green-800: oklch(44.8% 0.119 151.328);
     --color-emerald-400: oklch(76.5% 0.177 163.223);
     --color-emerald-800: oklch(43.2% 0.095 166.913);
-    --color-emerald-900: oklch(37.8% 0.077 168.94);
     --color-cyan-400: oklch(78.9% 0.154 211.53);
-    --color-cyan-900: oklch(39.8% 0.07 227.392);
-    --color-blue-400: oklch(70.7% 0.165 254.624);
-    --color-blue-800: oklch(42.4% 0.199 265.638);
+    --color-cyan-800: oklch(45% 0.085 224.283);
+    --color-violet-500: oklch(60.6% 0.25 292.717);
+    --color-violet-600: oklch(54.1% 0.281 293.009);
+    --color-violet-700: oklch(49.1% 0.27 292.581);
     --color-rose-400: oklch(71.2% 0.194 13.428);
     --color-rose-800: oklch(45.5% 0.188 13.697);
-    --color-rose-900: oklch(41% 0.159 10.272);
     --color-slate-300: oklch(86.9% 0.022 252.894);
     --color-slate-800: oklch(27.9% 0.041 260.031);
     --color-slate-900: oklch(20.8% 0.042 265.755);
+    --color-gray-50: oklch(98.5% 0.002 247.839);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --color-gray-300: oklch(87.2% 0.01 258.338);
     --color-gray-700: oklch(37.3% 0.034 259.733);
@@ -49,9 +41,9 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
-    --radius-2xl: 1rem;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
+    --font-roboto: Roboto;
   }
 }
 @layer base {
@@ -236,20 +228,26 @@
   .flex {
     display: flex;
   }
+  .grid {
+    display: grid;
+  }
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
+  .hidden\! {
+    display: none !important;
   }
   .field-sizing-content {
     field-sizing: content;
   }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
   .h-13 {
     height: calc(var(--spacing) * 13);
   }
-  .h-dvh {
-    height: 100dvh;
+  .h-\[calc\(100dvh-54px\)\] {
+    height: calc(100dvh - 54px);
   }
   .max-h-9 {
     max-height: calc(var(--spacing) * 9);
@@ -259,6 +257,9 @@
   }
   .w-13 {
     width: calc(var(--spacing) * 13);
+  }
+  .w-52\! {
+    width: calc(var(--spacing) * 52) !important;
   }
   .w-60 {
     width: calc(var(--spacing) * 60);
@@ -281,14 +282,14 @@
   .flex-2 {
     flex: 2;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .resize {
-    resize: both;
+  .cursor-pointer {
+    cursor: pointer;
   }
   .resize-none {
     resize: none;
+  }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -305,8 +306,14 @@
   .justify-center {
     justify-content: center;
   }
+  .gap-1 {
+    gap: calc(var(--spacing) * 1);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
@@ -314,18 +321,11 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .rounded-2xl {
-    border-radius: var(--radius-2xl);
-  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
   .rounded-md {
     border-radius: var(--radius-md);
-  }
-  .border {
-    border-style: var(--tw-border-style);
-    border-width: 1px;
   }
   .border-1 {
     border-style: var(--tw-border-style);
@@ -341,9 +341,6 @@
   .border-gray-900 {
     border-color: var(--color-gray-900);
   }
-  .bg-blue-400 {
-    background-color: var(--color-blue-400);
-  }
   .bg-cyan-400 {
     background-color: var(--color-cyan-400);
   }
@@ -353,23 +350,17 @@
   .bg-gray-200 {
     background-color: var(--color-gray-200);
   }
-  .bg-green-400 {
-    background-color: var(--color-green-400);
-  }
-  .bg-red-400 {
-    background-color: var(--color-red-400);
-  }
   .bg-rose-400 {
     background-color: var(--color-rose-400);
+  }
+  .bg-violet-500 {
+    background-color: var(--color-violet-500);
   }
   .bg-white {
     background-color: var(--color-white);
   }
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
-  }
-  .bg-yellow-500 {
-    background-color: var(--color-yellow-500);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -406,34 +397,21 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
-  .text-white {
-    color: var(--color-white);
+  .text-gray-50 {
+    color: var(--color-gray-50);
   }
-  .underline {
-    text-decoration-line: underline;
+  .shadow-\[0px_0px_3px_rgba\(0\,0\,0\,0\.2\)\] {
+    --tw-shadow: 0px 0px 3px var(--tw-shadow-color, rgba(0,0,0,0.2));
+    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
   .shadow-\[1px_0px_2px_rgba\(0\,0\,0\,0\.1\)\] {
     --tw-shadow: 1px 0px 2px var(--tw-shadow-color, rgba(0,0,0,0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .shadow-gray-300 {
-    --tw-shadow-color: oklch(87.2% 0.01 258.338);
-    @supports (color: color-mix(in lab, red, red)) {
-      --tw-shadow-color: color-mix(in oklab, var(--color-gray-300) var(--tw-shadow-alpha), transparent);
-    }
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
-  .hover\:bg-yellow-600 {
+  .hover\:bg-violet-600 {
     &:hover {
       @media (hover: hover) {
-        background-color: var(--color-yellow-600);
+        background-color: var(--color-violet-600);
       }
     }
   }
@@ -441,6 +419,46 @@
     &:focus {
       --tw-outline-style: none;
       outline-style: none;
+    }
+  }
+  .sm\:inline\! {
+    @media (width >= 40rem) {
+      display: inline !important;
+    }
+  }
+  .sm\:grid-cols-2 {
+    @media (width >= 40rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .sm\:flex-row {
+    @media (width >= 40rem) {
+      flex-direction: row;
+    }
+  }
+  .md\:ml-56 {
+    @media (width >= 48rem) {
+      margin-left: calc(var(--spacing) * 56);
+    }
+  }
+  .md\:block {
+    @media (width >= 48rem) {
+      display: block;
+    }
+  }
+  .md\:hidden\! {
+    @media (width >= 48rem) {
+      display: none !important;
+    }
+  }
+  .md\:w-52 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 52);
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .dark\:border-gray-300 {
@@ -453,24 +471,14 @@
       border-color: var(--color-gray-700);
     }
   }
-  .dark\:bg-blue-800 {
+  .dark\:bg-cyan-800 {
     &:where(.dark, .dark *) {
-      background-color: var(--color-blue-800);
-    }
-  }
-  .dark\:bg-cyan-900 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-cyan-900);
+      background-color: var(--color-cyan-800);
     }
   }
   .dark\:bg-emerald-800 {
     &:where(.dark, .dark *) {
       background-color: var(--color-emerald-800);
-    }
-  }
-  .dark\:bg-emerald-900 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-emerald-900);
     }
   }
   .dark\:bg-gray-700 {
@@ -483,34 +491,14 @@
       background-color: var(--color-gray-900);
     }
   }
-  .dark\:bg-green-800 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-green-800);
-    }
-  }
-  .dark\:bg-red-800 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-red-800);
-    }
-  }
-  .dark\:bg-red-900 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-red-900);
-    }
-  }
   .dark\:bg-rose-800 {
     &:where(.dark, .dark *) {
       background-color: var(--color-rose-800);
     }
   }
-  .dark\:bg-rose-900 {
+  .dark\:bg-violet-700 {
     &:where(.dark, .dark *) {
-      background-color: var(--color-rose-900);
-    }
-  }
-  .dark\:bg-yellow-700 {
-    &:where(.dark, .dark *) {
-      background-color: var(--color-yellow-700);
+      background-color: var(--color-violet-700);
     }
   }
   .dark\:bg-yellow-800 {
@@ -537,34 +525,47 @@
     user-select: none;
   }
   * {
+    font-family: var(--font-roboto);
     color: var(--color-slate-800);
     &:where(.dark, .dark *) {
       color: var(--color-slate-300);
     }
-    font-family: Roboto;
+  }
+  input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-results-button, input[type="search"]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+    appearance: none;
   }
 }
 @font-face {
   font-family: Roboto;
-  src: url("./assets/fonts/Roboto-Medium.ttf");
+  src: url("../fonts/Roboto-Medium.ttf");
 }
 @layer components {
   .menu-item {
     display: flex;
-    width: calc(var(--spacing) * 60);
+    width: max-content;
+    cursor: pointer;
     align-items: center;
-    padding-inline: calc(var(--spacing) * 4);
-    padding-block: calc(var(--spacing) * 3);
+    padding-block: calc(var(--spacing) * 2);
   }
   .color-plate {
     display: block;
     height: calc(var(--spacing) * 5);
     width: calc(var(--spacing) * 5);
+    cursor: pointer;
     border-radius: calc(infinity * 1px);
+    border-style: var(--tw-border-style);
+    border-width: 1px;
   }
   .note {
     border-radius: var(--radius-md);
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+    border-color: var(--color-gray-200);
     padding: calc(var(--spacing) * 3);
+    &:where(.dark, .dark *) {
+      border-color: var(--color-gray-800);
+    }
   }
   .note-title {
     font-size: var(--text-xl);
@@ -577,18 +578,10 @@
     }
   }
   .note-text {
-    margin-top: calc(var(--spacing) * 2);
     color: var(--color-slate-900);
     &:where(.dark, .dark *) {
       color: var(--color-gray-200);
     }
-  }
-  .note-column {
-    display: flex;
-    min-width: calc(var(--spacing) * 52);
-    flex: 1;
-    flex-direction: column;
-    gap: calc(var(--spacing) * 2);
   }
 }
 @property --tw-border-style {
@@ -665,11 +658,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -689,7 +677,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
     }
   }
 }
