--- a/javascript/Notes/assets/css/style.css
+++ b/javascript/Notes/assets/css/style.css
@@ -234,9 +234,6 @@
   .hidden {
     display: none;
   }
-  .hidden\! {
-    display: none !important;
-  }
   .field-sizing-content {
     field-sizing: content;
   }
@@ -251,9 +248,6 @@
   }
   .max-h-9 {
     max-height: calc(var(--spacing) * 9);
-  }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
   }
   .w-13 {
     width: calc(var(--spacing) * 13);
@@ -275,6 +269,9 @@
   }
   .max-w-52 {
     max-width: calc(var(--spacing) * 52);
+  }
+  .min-w-10 {
+    min-width: calc(var(--spacing) * 10);
   }
   .flex-1 {
     flex: 1;
@@ -365,6 +362,9 @@
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
+  .px-2 {
+    padding-inline: calc(var(--spacing) * 2);
+  }
   .px-3 {
     padding-inline: calc(var(--spacing) * 3);
   }
@@ -419,11 +419,6 @@
     &:focus {
       --tw-outline-style: none;
       outline-style: none;
-    }
-  }
-  .sm\:inline\! {
-    @media (width >= 40rem) {
-      display: inline !important;
     }
   }
   .sm\:grid-cols-2 {
@@ -521,9 +516,6 @@
   }
 }
 @layer base {
-  :root {
-    user-select: none;
-  }
   * {
     font-family: var(--font-roboto);
     color: var(--color-slate-800);
@@ -543,10 +535,16 @@
 @layer components {
   .menu-item {
     display: flex;
-    width: max-content;
     cursor: pointer;
     align-items: center;
-    padding-block: calc(var(--spacing) * 2);
+    overflow: hidden;
+    border-radius: var(--radius-md);
+    padding: calc(var(--spacing) * 2);
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-violet-600);
+      }
+    }
   }
   .color-plate {
     display: block;
@@ -581,6 +579,12 @@
     color: var(--color-slate-900);
     &:where(.dark, .dark *) {
       color: var(--color-gray-200);
+    }
+  }
+  .active {
+    background-color: var(--color-violet-500);
+    &:where(.dark, .dark *) {
+      background-color: var(--color-violet-700);
     }
   }
 }
