--- a/javascript/Notes/assets/css/style.css
+++ b/javascript/Notes/assets/css/style.css
@@ -41,6 +41,8 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --font-roboto: Roboto;
@@ -234,8 +236,14 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .field-sizing-content {
     field-sizing: content;
+  }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
   }
   .h-6 {
     height: calc(var(--spacing) * 6);
@@ -246,11 +254,20 @@
   .h-\[calc\(100dvh-54px\)\] {
     height: calc(100dvh - 54px);
   }
+  .max-h-0 {
+    max-height: calc(var(--spacing) * 0);
+  }
   .max-h-9 {
     max-height: calc(var(--spacing) * 9);
   }
+  .min-h-0 {
+    min-height: calc(var(--spacing) * 0);
+  }
   .w-13 {
     width: calc(var(--spacing) * 13);
+  }
+  .w-52 {
+    width: calc(var(--spacing) * 52);
   }
   .w-52\! {
     width: calc(var(--spacing) * 52) !important;
@@ -279,8 +296,14 @@
   .flex-2 {
     flex: 2;
   }
+  .border-collapse {
+    border-collapse: collapse;
+  }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .resize-none {
     resize: none;
@@ -323,6 +346,10 @@
   }
   .rounded-md {
     border-radius: var(--radius-md);
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
   }
   .border-1 {
     border-style: var(--tw-border-style);
@@ -400,6 +427,12 @@
   .text-gray-50 {
     color: var(--color-gray-50);
   }
+  .underline {
+    text-decoration-line: underline;
+  }
+  .opacity-0 {
+    opacity: 0%;
+  }
   .shadow-\[0px_0px_3px_rgba\(0\,0\,0\,0\.2\)\] {
     --tw-shadow: 0px 0px 3px var(--tw-shadow-color, rgba(0,0,0,0.2));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -407,6 +440,19 @@
   .shadow-\[1px_0px_2px_rgba\(0\,0\,0\,0\.1\)\] {
     --tw-shadow: 1px 0px 2px var(--tw-shadow-color, rgba(0,0,0,0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+  }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
+  .transition-all {
+    transition-property: all;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .duration-500 {
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
   }
   .hover\:bg-violet-600 {
     &:hover {
@@ -556,11 +602,21 @@
     border-width: 1px;
   }
   .note {
+    display: flex;
+    max-height: calc(var(--spacing) * 40);
+    flex-direction: column;
+    gap: calc(var(--spacing) * 2);
+    overflow: hidden;
     border-radius: var(--radius-md);
     border-style: var(--tw-border-style);
     border-width: 1px;
     border-color: var(--color-gray-200);
     padding: calc(var(--spacing) * 3);
+    transition-property: all;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+    --tw-duration: 500ms;
+    transition-duration: 500ms;
     &:where(.dark, .dark *) {
       border-color: var(--color-gray-800);
     }
@@ -586,6 +642,18 @@
     &:where(.dark, .dark *) {
       background-color: var(--color-violet-700);
     }
+  }
+  .close-note {
+    max-height: calc(var(--spacing) * 40);
+  }
+  .open-note {
+    max-height: 100lvh;
+  }
+  .close-input {
+    max-height: calc(var(--spacing) * 6);
+  }
+  .open-input {
+    max-height: 100lvh;
   }
 }
 @property --tw-border-style {
@@ -662,6 +730,15 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -681,6 +758,8 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
+      --tw-duration: initial;
     }
   }
 }
