--- a/Svelte-kit/gainzatron/src/app.css
+++ b/Svelte-kit/gainzatron/src/app.css
@@ -1,1 +1,11 @@
 @import 'tailwindcss';
+
+@layer components {
+	.stack {
+	
+		@apply grid [grid-template-areas:'stack'];
+	}
+	.stack > * {
+		@apply [grid-area:stack]
+	}
+}
